# SmilePal-ESP32-BLE-rs

./: Cargo.toml  DISCLAIMER.md  LICENSE  README.md
.cargo/: config.toml
examples/: ble_client.rs  ble_scan.rs  ble_secure_client.rs  ble_secure_server.rs  ble_server.rs
examples/old/: ble_keyboard.rs
src/: ble_device.rs  lib.rs
src/client/: ble_scan.rs
